kubernetes/travel/fairtrail/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fairtrail
  namespace: travel
  labels:
    homelab.category: travel
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fairtrail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fairtrail
        homelab.category: travel
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: fairtrail
          image: ghcr.io/affromero/fairtrail:0.3.10
          securityContext:
            privileged: false
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 1Gi
              memory: 256Mi
            limits:
              cpu: 500m
              ephemeral-storage: 2Gi
              memory: 1Gi
          port:
            - name: http
              containerPort: 3003
              protocol: TCP
