kubernetes/travel/fairtrail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fairtrail
  namespace: travel
  labels:
    app.kubernetes.io/name: fairtrail
    homelab.category: travel
spec:
  selector:
    app.kubernetes.io/name: fairtrail
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
